--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.4",
     "formik": "^2.4.6",
     "lucide-react": "^0.427.0",
     "moment": "^2.30.1",
