--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-calendar": "^5.0.0",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
+    "react-draggable": "^4.4.6",
     "react-leaflet": "^4.2.1",
+    "react-resizable": "^3.0.5",
     "react-router-dom": "^6.26.0",
     "yup": "^1.4.0"
   },
